test/frontend/fail/function_as_value.osl
int foo() {}
shader bar() {
    (false ? foo : foo)();
}
